[package]
name = "netool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
trust-dns-resolver = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[[bin]]
name = "netool"
path = "src/main.rs"